# goldenrod

./: .deepsource.toml  .gitignore  Cargo.toml  FtSt  FtSt.bat  README.md  build.py  main.py  requirements.txt  setup.py
src/: anvil.py  goldenrod.rs  main.py
