[package]
name = "goldenrod"
version = "0.4.1"
edition = "2018"

[dependencies]
http = "0.2"
stringr = "0.1.2"
reqwest = {version = "0.11.4", features = ["blocking", "json"]}
error-chain = "0.12.4"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
dirs = "4.0.0"

[[bin]]
name = "goldenrod"
path = "src/goldenrod.rs"
